--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">FirebaseAppBTU1</string>
     <string name="enter_your_email">enter your email</string>
     <string name="enter_your_password">enter your password</string>
+    <string name="enter_reset_code">enter reset code</string>
 </resources>
